# mini-llm-inference-engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bench_int8_mixed_minimal  bench_int8_mixed_minimal.cu  bench_matmul_optimized.csv  convert_tokenizer.py  converter.py  final_roofline.py  fix_tokenizer.py  gemm_layout_test.cpp  gemm_test  gen_model  generate_dummy.cpp  generate_model.cpp  generate_test_model.cpp  h origin master  int8_gemm_benchmark  int8_gemm_validate  int8_gemm_validate.cu  llm_inference_whitepaper.docx  llm_inference_whitepaper.md  mini-llm  mini-llm-engine  model.h  model.safetensors  plot_knee.py  plot_roofline.py  run.sh  test_alloc  test_alloc.cu  test_cutlass_int8  test_half_alloc  test_half_alloc.cu  test_torch.py  tinyllama_attention_int8_qkv_fused  tinyllama_batch  tinyllama_batch8_fused  (+23 more)
analysis/: generate_graph.py  generate_pro_graph.py  plot_final_combined.py  plot_saturation.py  plot_saturation_sweep.py  plot_throughput.py
benchmarks/: bench_int8_mixed  bench_int8_mixed.cu
models/: download_model.py
src/: .gitignore  .tinyllama_fp16_minimal.cu.swp  cli.cpp  cli.h  cuda_benchmark.cu  cuda_engine.cu  cuda_engine_fused.cu  cuda_fused_benchmark.cu  cuda_fused_kernels.cu  cuda_llm_fp16.cu  cutlass_int8_gemm.h  flash_attention.cpp  flash_attention.h  gemm.cpp  gemm.h  gemm_layout_test.cpp  generate.cpp  generate.h  int8_gemm_benchmark.cu  int8_gemm_validade.cu  kernel_avx2.h  layers.cpp  layers.h  main.cpp  matmul_blocked.cpp  matmul_blocked.h  matmul_hpc.cpp  matmul_hpc.h  model.cpp  model.h  model_loader.cpp  quantize.cpp  (+17 more)
(+15 files in other folders)
